Inclusão das dependências de uma PWA.

--- a/src/index.html
+++ b/src/index.html
@@ -139,6 +139,8 @@
       }
     }
   </style>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 
 <body>
